Made the stuff not selectable L

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+html {
+    user-select: none;
+}
 body {
     background-image: url("./media/background-main.jpg");
     background-color: #cccccc;
