--- a/style.css
+++ b/style.css
@@ -9,10 +9,9 @@ body {
 .paragraf1{
     color: red;
     text-align: center;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'VCR OSD Mono';
     font-size: 10rem;
-    text-decoration: underline;
-    text-underline-position: below;
+    margin-top: 20px;
 }
 
 .chars{
